@@ -1,4 +1,5 @@
 3.5
+	+ Show nicer error when uploading invalid certificates to client configuration
 	+ Set version to 3.5
 3.4
 	+ Log audit working properly for download client bundle
